--- a/gateway-service/src/main/resources/project-local.yml
+++ b/gateway-service/src/main/resources/project-local.yml
@@ -2,6 +2,6 @@ swarm:
   http:
     port: 8081
 freelancer-service:
-  url: "http://freelancer-service-sarawukl-lab10.apps-375d.generic.opentlc.com"
+  url: "http://mock-freelancer-service"
 project-service:
-  url: "http://project-service-sarawukl-lab10.apps-375d.generic.opentlc.com"
+  url: "http://mock-project-service"
