--- a/etc/gateway-application.yml
+++ b/etc/gateway-application.yml
@@ -1,4 +1,4 @@
 freelancer-service:
-  url: http://freelancer-service-sarawukl-lab10.apps-375d.generic.opentlc.com
+  url: http://freelancer-service
 project-service:
-  url: http://project-service-sarawukl-lab10.apps-375d.generic.opentlc.com
+  url: http://project-service
